--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "attachmediastream": "^2.1.0",
     "devextreme": "^22.2.3",
     "devextreme-react": "^22.2.3",
     "filetransfer": "^2.0.5",
@@ -66,6 +65,7 @@
     "devextreme-cli": "1.5.0",
     "devextreme-themebuilder": "^22.2.3",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "web-audio-peak-meter": "^3.1.0"
   }
 }
